--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "immer": "^10.1.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.514.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -42,6 +43,7 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.9",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
